--- a/RVFS/RVFS/templates/registration/login.html
+++ b/RVFS/RVFS/templates/registration/login.html
@@ -3,10 +3,13 @@
 {% block title %}Login{% endblock %}
 
 {% block body %}
+  <div class="placeholder-small"></div>
   <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input class="button" type="submit" value="Login">
+    <a href="{% url 'password_reset' %}">Forgot Password?</a>
   </form>
+  <div class="placeholder-small"></div>
 {% endblock %}
