--- a/RVFS/static/css/app.css
+++ b/RVFS/static/css/app.css
@@ -13,6 +13,7 @@ body {
     background-image: url('../Backgroundonly.png');
 }
 
+
 /* ***************************************************************************
 NAV
 *************************************************************************** */
@@ -24,11 +25,16 @@ NAV
 .nav-link {
     font-weight: bold;
     font-size: 18px;
+    margin-bottom: 0;
 }
 
 .nav-social {
     width: 25px;
     height: 25px;
+}
+
+.staff-nav {
+    padding: 1px;
 }
 
 .hide-nav {
@@ -53,8 +59,8 @@ NAV
 }
 
 .header-main {
-    font-family: 'Niconne', serif;
-    font-size: 40px;
+    font-family: 'Cinzel Decorative', serif;
+    font-size: 29px;
     font-weight: bold;
 }
 
@@ -119,13 +125,13 @@ MAIN SECTION
 
 .left-bar {
     margin: 5px 0px 0px;
-    background-size: 100% 650px;
+    background-size: 100% 325px;
     background-image: url('../left scroll.png')
 }
 
 .right-bar {
     margin: 5px 0px 0px;
-    background-size: 100% 650px;
+    background-size: 100% 325px;
     background-image: url('../right scroll.png')
 }
 
@@ -150,7 +156,7 @@ MAIN SECTION
 }
 
 .section-heads {
-    font-family: 'Niconne', serif;
+    font-family: 'Cinzel Decorative', serif;
     padding: 10px 0px;
 }
 
@@ -159,12 +165,12 @@ MAIN SECTION
 }
 
 .names {
-    font-family: 'Niconne', serif;
+    font-family: 'Cinzel Decorative', serif;
     text-align: center;
 }
 
 .next-link {
-    font-family: 'Niconne', serif;
+    font-family: 'Cinzel Decorative', serif;
     text-align: center;
     text-decoration: underline;
     color: rgb(122, 0, 0);
@@ -214,12 +220,31 @@ MAIN SECTION
     color: rgb(142, 0, 0);
 }
 
+.slide-link {
+    font-size: 2rem;
+}
+
 .gallery-title {
     text-align: center;
 }
 
 .gallery-row {
     padding: 0 20px;
+}
+
+.galleries-row {
+    border: .1rem solid black;
+    border-radius: 10%;
+    padding: 25px 15px;
+    margin: 25px 15px;
+}
+
+.galleries-image {
+    max-height: 250px;
+}
+
+.galleries-text-row {
+    height: 50%;
 }
 
 .gallery-card {
@@ -286,6 +311,15 @@ MAIN SECTION
 .serv-section-font {
     font-size: 22px;
     font-style: bold;
+}
+
+.iframe-map {
+    width: 400px;
+    height: 300px;
+}
+
+.p-emails {
+    margin-bottom: 0;
 }
 
 .page-404 {
@@ -355,10 +389,10 @@ CATALOG
 }
 
 .card {
-    border-width: .15rem;
+    border-width: .1rem;
     border-color: black;
     background-size: 100% 100%;
-    background-image: url('../marble.jpeg');
+    background-color: transparent;
     padding: .5rem;
     margin-left: 1rem;
     margin-top: 1rem;
@@ -410,26 +444,46 @@ CATALOG
     max-height: 400px;
 }
 
+.item-header {
+    text-align: center;
+    font-weight: normal;
+}
+
+.service {
+    padding-bottom: 20px;
+}
+
+.serv-image {
+    max-width: 100%;
+}
+
 .service-image-banner {
     padding: 10px 55px;
-}
-
-.service-image {
-    width: 100%;
-}
-
-.calendar {
-    width: 100%;
-    border-width: 0;
-    height: 600px;
 }
 
 .textarea-form > textarea, input {
     max-width: 95%;
 }
 
+.cart-form {
+    padding-top: 80px;
+}
+
 .placeholder {
     height: 250px;
+}
+
+.placeholder-small {
+    height: 52px;
+}
+
+.placeholder-md {
+    height: 100px;
+}
+
+.newsletter {
+    font-size: 14.66px;
+    margin-bottom: 10px;
 }
 
 .del-button {
@@ -444,6 +498,16 @@ CATALOG
     color: rgba(0, 0, 0, 0.7);
     text-decoration: none;
 }
+
+.update-order {
+    padding-right: 22px;
+    padding-left: 22px;
+}
+
+.dropdown:hover>.dropdown-menu {
+  display: block;
+}
+
 
 /* ***************************************************************************
 ACCOUNT
@@ -486,9 +550,6 @@ ACCOUNT
     padding-bottom: 25px;
 }
 
-.contact-form {
-
-}
 
 .add-col {
     padding-top: 15px;
@@ -508,7 +569,7 @@ FOOTER
 }
 
 .links {
-    margin-left: -25px;
+    padding-left: 0;
 }
 
 .links li {
@@ -523,6 +584,29 @@ FOOTER
 MEDIA QUERY
 *************************************************************************** */
 
+@media (max-width: 1024px) {
+    .banner-img {
+        height: 100px;
+        width: 100px;
+    }
+    .header-main {
+        font-size: 30px;
+    }
+    .header-sub {
+        font-size: 20px;
+    }
+    .content-back {
+        padding-bottom: 0;
+    }
+    .header {
+        padding-top: 30px;
+    }
+}
+
+
+
+
+
 @media (max-width: 1199px) {
     .info {
         padding-left: 0;
@@ -530,6 +614,9 @@ MEDIA QUERY
     }
     .account-list {
     width: 46%;
+    }
+    .slide-link {
+        font-size: 1.5rem;
     }
 }
 
@@ -543,6 +630,9 @@ MEDIA QUERY
     .acc-pic-col {
         width: 200px;
         height: 200px;
+    }
+    .slide-link {
+        font-size: 1.1rem;
     }
 }
 
@@ -562,6 +652,9 @@ MEDIA QUERY
     }
     .account-list {
     width: 100%;
+    }
+    .carousel-link {
+        width: 28%;
     }
 }
 
@@ -589,6 +682,22 @@ MEDIA QUERY
     .acc-pic-col {
         width: 100%;
     }
+    .iframe-map {
+    width: 250px;
+    height: 175px;
+    }
+    .carousel-link {
+        width: 30%;
+    }
+    .carousel-text {
+        font-size: 28px;
+    }
+}
+
+@media (max-width: 530px) {
+    .carousel-link {
+        width: 32%;
+    }
 }
 
 @media (max-width: 490px) {
@@ -603,6 +712,9 @@ MEDIA QUERY
         flex-grow: 0;
         padding-left: 0;
         padding-right: 0;
+    }
+    .carousel-link {
+        width: 34%;
     }
 }
 
@@ -633,6 +745,10 @@ MEDIA QUERY
     .side-bar {
         width: 15px;
         flex: none !important;
+    }
+    .iframe-map {
+    width: 175px;
+    height: 200px;
     }
 }
 
