--- a/RVFS/catalog/templates/cart.html
+++ b/RVFS/catalog/templates/cart.html
@@ -13,7 +13,7 @@
     {% if cart %}
         <h3 class="section-head text-standard">Products:</h3>
         <ul class="row acc-list-row">
-        {% for item in prods %}
+        {% for item in cart %}
             {% if forloop.counter0|mod:4 == 0 and forloop.counter0 > 0 %}
             </ul>
             <ul class="row acc-list-row">
@@ -85,7 +85,7 @@
     {% endif %}
     </div>
     <div class="w-100">
-        <h3 id="total" class="text-right text-standard">Total:
+        <h3 id="total" class="text-right text-standard">Subtotal:
             {% if total %}
                 {% if total.endswith == 0 %}
                     ${{ total }}0
@@ -97,30 +97,6 @@
             {% endif %}
         </h3>
     </div>
-    {% if not code %}
-    <div class="w-100">
-        <h4 class="text-standard text-left">Discount Code:</h4>
-    </div>
-    <div id="discount-parent" class="w-100 d-flex">
-        <input type="text" name="code">
-        <input id="discount" class="btn btn-secondary text-standard ml-auto" type="submit" name="apply_code" value="Apply Code">
-    </div>
-    {% else %}
-    <div class="w-100">
-        <h4 class="text-standard text-left">Discount Code:</h4>
-    </div>
-    <div id="discount-parent" class="row">
-        <div class="col">
-            <p class="text-standard text-left">Active code: {{ code.0 }}</p>
-            <p class="text-standard text-left">Code Effect: {{ code.1 }} discount</p>
-        </div>
-        <div class="col align-self-end">
-            <div class="d-flex">
-                <a id="remove" class="btn btn-danger text-standard ml-auto" href="#">Remove</a>
-            </div>
-        </div>
-    </div>
-    {% endif %}
     {% if account.cart_total %}
     <div id="shipping">
     <img class="dividor" src="{% static 'arrow-divider.png' %}">
@@ -192,52 +168,13 @@
         {% endif %}
     </div>
     <div class="w-100 d-flex">
-        <input class="btn btn-secondary text-standard ml-auto" type="submit" name="check" value="Continue Checkout with PayPal">
+        <input class="btn btn-secondary text-standard ml-auto" type="submit" name="check" value="Continue to Checkout">
     </div>
     </div>
     {% endif %}
 </form>
 {% endblock %}
 
-{% if alt_add %}
 {% block js %}
-
 <script src="{% static 'js/update_cart.js' %}"></script>
-<script type="text/javascript">
-$('#discount').click(function (event) {
-  event.preventDefault();
-  var code = event.target.form[3].value;
-  $.get('/shop/cart/apply-discount/', {code: code},
-    function(data) {
-      if (data.includes('Not')) {
-        if ($('#discount-parent')[0].nextSibling.id !== 'message') {
-          $(data).insertAfter($('#discount-parent'));
-        } else {
-          $('#message').html(data);
-        }
-      }
-      else {
-        if ($('#discount-parent')[0].nextSibling.id === 'message') {
-          $('#message').html('');
-        }
-        $('#discount-parent').html(data);
-        setTimeout(location.reload.bind(location), 4000);
-      }
-    }
-  );
-});
-</script>
-<script type="text/javascript">
-$('#remove').click(function (event) {
-  event.preventDefault();
-  $.get('/shop/cart/remove-discount/',
-    function(data) {
-      $('#discount-parent').html(data);
-      setTimeout(location.reload.bind(location), 4000);
-    }
-  );
-});
-</script>
-
 {% endblock %}
-{% endif %}
