--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -19,10 +19,10 @@
       </div>
       <div class="col-10 content-back">
         <nav class="navbar navbar-expand-md navbar-light">
-          <div class="row header header-small">
+          <div class="row header">
             <div class="col-md-auto banner-text">
               <div class="row">
-                <div class="col">
+                <div class="col banner-img-col">
                   <img class="banner-img" src="{% static 'RVFM logo.png' %}">
                 </div>
                 <div class="col-md-auto">
@@ -70,14 +70,15 @@
                 <li>
                   <a href="https://www.instagram.com/m.ravenmoore/"><img class="nav-social" src="{% static 'insta.png' %}"></a>
                 </li>
+                {% if not user.is_authenticated %}
                 <li>
-                  {% if not user.is_authenticated %}
                   <form id="newsletter">
                     <input class="newsletter" type="text" name="newsletter" placeholder="Newsletter">
+                    <br>
                     <input class="btn btn-secondary" type="submit" value="Sign up!">
                   </form>
-                  {% endif %}
                 </li>
+                {% endif %}
               {% endif %}
               </ul>
             </div>
