--- a/RVFS/static/css/app.css
+++ b/RVFS/static/css/app.css
@@ -42,7 +42,7 @@ NAV
 }
 
 .header {
-    padding: 35px 30px 15px 5px;
+    padding: 30px 30px 15px 5px;
 }
 
 .text-standard {
@@ -55,17 +55,13 @@ NAV
 
 .header-sub {
     font-family: 'Tangerine', serif;
-    font-size: 32px;
+    font-size: 2.2rem;
 }
 
 .header-main {
     font-family: 'Cinzel Decorative', serif;
-    font-size: 29px;
+    font-size: 1.8rem;
     font-weight: bold;
-}
-
-.banner-text {
-    color: black;
 }
 
 .banner-text p {
@@ -81,6 +77,7 @@ NAV
     text-align: right;
     list-style: none;
     color: black;
+    padding-left: 0;
 }
 
 .info li {
@@ -327,13 +324,20 @@ MAIN SECTION
     background-image: url('static/404-image.jpg');
 }
 
-.blank_cell {
-    height: 1.5rem;
-    margin-bottom: 8px;
-}
-
 .discount-remove {
     margin: 8px 0px;
+}
+
+.code-table th {
+    border: 1px solid #dee2e6;
+}
+
+.code-table td {
+    border: 1px solid #dee2e6;
+}
+
+.table thead th {
+    border-bottom: none;
 }
 
 /* ***************************************************************************
@@ -594,43 +598,39 @@ FOOTER
 MEDIA QUERY
 *************************************************************************** */
 
-@media (max-width: 1024px) {
-    .banner-img {
-        height: 100px;
-        width: 100px;
-    }
-    .header-main {
-        font-size: 30px;
-    }
-    .header-sub {
-        font-size: 20px;
-    }
-    .content-back {
-        padding-bottom: 0;
-    }
-    .header {
-        padding-top: 30px;
-    }
-}
-
-
-
-
-
-@media (max-width: 1199px) {
-    .info {
-        padding-left: 0;
-        text-align: left !important;
-    }
+@media (max-width: 1200px) {
     .account-list {
     width: 46%;
     }
     .slide-link {
         font-size: 1.4rem;
     }
+    .header-main {
+        font-size: 1.4rem;
+    }
+    .header-sub {
+        font-size: 1.9rem;
+    }
+    .banner-img {
+        height: 100px;
+        width: 100px;
+    }
 }
 
-@media (max-width: 990px) {
+@media (max-width: 992px) {
+    .info {
+        padding-left: 0;
+        text-align: left !important;
+    }
+}
+
+@media (max-width: 1024px) {
+    .content-back {
+        padding-bottom: 0;
+    }
+}
+
+@media (max-width: 995px) {
     .catalog {
         padding-left: 20px;
     }
@@ -668,10 +668,16 @@ MEDIA QUERY
     }
 }
 
-@media (max-width: 758px) {
+@media (max-width: 768px) {
     .acc-pic-col {
         width: 120px;
         height: 120px;
+    }
+    .banner-img-col {
+        height: 0;
+    }
+    .banner-img {
+        visibility: hidden;
     }
 }
 
