--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -103,7 +103,7 @@
                 <li class="nav-item text-standard {% if nbar == 'home' %}active{% endif %}"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                 <li class="nav-item text-standard {% if nbar == 'about' %}active{% endif %}"><a class="nav-link" href="{% url 'about' %}">About</a></li>
                 <li class="nav-item text-standard {% if nbar == 'contact' %}active{% endif %}"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
-                <li class="nav-item text-standard {% if nbar == 'prods' %}active{% endif %}"><a class="nav-link" href="{% url 'prods' %}">Products</a></li>
+                <li class="nav-item text-standard {% if nbar == 'prods' %}active{% endif %}"><a class="nav-link" href="{% url 'prods' %}">Market</a></li>
                 <li class="nav-item text-standard {% if nbar == 'servs' %}active{% endif %}"><a class="nav-link" href="{% url 'servs' %}">Services</a></li>
                 <li class="nav-item text-standard dropdown {% if nbar == 'gallery' %}active{% endif %}">
                   <a class="nav-link dropdown-toggle {% if nbar == 'galleries' %}active{% endif %}" id="dropdown" aria-haspopup="true" aria-expanded="false"  href="{% url 'galleries' %}" role="button">Galleries</a>
