--- a/RVFS/catalog/templates/catalog.html
+++ b/RVFS/catalog/templates/catalog.html
@@ -14,8 +14,16 @@ Services
 
 {% block body %}
 <div class="row">
+    <div class="col">
+        <h1 class="section-heads text-center">THE MARKETPLACE</h1>
+        <p class="text-standard about-text">
+        In the Marketplace you’ll find the ever-changing inventory including but not limited to; custom blades and wands, chainmail jewelry and sheet-goods, and wire-wrapped stones. Alongside the inventory, we also have our friends and artisans listed below with their information. We hope you enjoy the Marketplace and thank you for visiting.
+        </p>
+    </div>
+</div>
+<div class="row">
     <div class="col-1 side-bar">
-        <h5 class="text-standard">Market Place
+        <h5 class="text-standard">Marketplace
         {% if slug %}
          - {{ slug }}
         {% else %}
