--- a/RVFS/catalog/templates/cart.html
+++ b/RVFS/catalog/templates/cart.html
@@ -27,7 +27,7 @@
                             </div>
                             <div class="col">
                                 <label class="text-standard">Quantity:</label>
-                                <select name="{{ item.count }}" onchange="updatecart(this.value, this.name)">
+                                <select name="{{ item.item.id }}" onchange="updatecart(this.value, this.name, 'cart')">
                                     <option value="1" {% if item.quantity == '1' %}selected{% endif %}>1</option>
                                     <option value="2" {% if item.quantity == '2' %}selected{% endif %}>2</option>
                                     <option value="3" {% if item.quantity == '3' %}selected{% endif %}>3</option>
@@ -41,7 +41,7 @@
                                 {% endfor %}
                                 <h5 class="text-standard">${{ item.item.price }} per unit</h5>
                                 <div class="del-button d-flex">
-                                    <button class="delete btn btn-danger ml-auto" data-item="{{ item.count }}" type="button">remove</button>
+                                    <button class="delete btn btn-danger ml-auto" data-item="{{ item.item.id }}" type="button">remove</button>
                                 </div>
                             </div>
                         </div>
@@ -57,7 +57,7 @@
                         </div>
                         <div class="col">
                             <label class="text-standard">Quantity:</label>
-                            <select name="{{ item.count }}" onchange="updatecart(this.value, this.name)">
+                            <select name="{{ item.item.id }}" onchange="updatecart(this.value, this.name, 'cart')">
                                 <option value="1" {% if item.quantity == '1' %}selected{% endif %}>1</option>
                                 <option value="2" {% if item.quantity == '2' %}selected{% endif %}>2</option>
                                 <option value="3" {% if item.quantity == '3' %}selected{% endif %}>3</option>
@@ -71,7 +71,7 @@
                             {% endfor %}
                             <h5 class="text-standard">${{ item.item.price }} per unit</h5>
                             <div class="del-button d-flex">
-                                <button class="delete btn btn-danger ml-auto" data-item="{{ item.count }}" type="button">Remove</button>
+                                <button class="delete btn btn-danger ml-auto" data-item="{{ item.item.id }}" type="button">Remove</button>
                             </div>
                         </div>
                     </div>
@@ -81,7 +81,6 @@
         </ul>
     {% else %}
     <h5 class="w-100 text-standard">Your cart is empty.</h5>
-    <div class="placeholder"></div>
     {% endif %}
     </div>
     <div class="w-100">
@@ -97,18 +96,107 @@
             {% endif %}
         </h3>
     </div>
-    {% if account.cart_total %}
+
+    <h2 class="text-standard">Pre-orders</h2>
+    <div id='pre-order' class="row acc-row">
+    {% if pre_order %}
+        <h3 class="section-head text-standard">Products:</h3>
+        <ul class="row acc-list-row">
+        {% for item in pre_order %}
+            {% if forloop.counter0|mod:4 == 0 and forloop.counter0 > 0 %}
+            </ul>
+            <ul class="row acc-list-row">
+                <li id="prod {{ forloop.counter0 }}" class="card account-list">
+                        <div class="row">
+                            <div class="col text-center">
+                                {% thumbnail item.item.image "100x100" crop="center" as pic %}
+                                <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
+                                {% endthumbnail %}
+                                <a class="acc-item-link" href="{% url 'prod' item.item_id %}"><h4 class="text-standard">{{ item.item.name }}</h4></a>
+                            </div>
+                            <div class="col">
+                                <label class="text-standard">Quantity:</label>
+                                <select name="{{ item.item.id }}" onchange="updatecart(this.value, this.name, 'pre')">
+                                    <option value="1" {% if item.quantity == '1' %}selected{% endif %}>1</option>
+                                    <option value="2" {% if item.quantity == '2' %}selected{% endif %}>2</option>
+                                    <option value="3" {% if item.quantity == '3' %}selected{% endif %}>3</option>
+                                    <option value="4" {% if item.quantity == '4' %}selected{% endif %}>4</option>
+                                    <option value="5" {% if item.quantity == '5' %}selected{% endif %}>5</option>
+                                </select>
+                                {% for field, value in item.items %}
+                                    {% if field in item_fields %}
+                                    <h5 class="text-standard">{{ field }}: {{ value }}</h5>
+                                    {% endif %}
+                                {% endfor %}
+                                <h5 class="text-standard">${{ item.item.price }} per unit</h5>
+                                <div class="del-button d-flex">
+                                    <button class="delete btn btn-danger ml-auto" data-item="{{ item.item.id }}" type="button">remove</button>
+                                </div>
+                            </div>
+                        </div>
+                </li>
+            {% else %}
+                <li id="prod {{ forloop.counter0 }}" class="card account-list">
+                    <div class="row">
+                        <div class="col text-center">
+                            {% thumbnail item.item.image "100x100" crop="center" as pic %}
+                                <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
+                            {% endthumbnail %}
+                            <a class="acc-item-link" href="{% url 'prod' item.item_id %}"><h4 class="text-standard">{{ item.item.name }}</h4></a>
+                        </div>
+                        <div class="col">
+                            <label class="text-standard">Quantity:</label>
+                            <select name="{{ item.item.id }}" onchange="updatecart(this.value, this.name, 'pre')">
+                                <option value="1" {% if item.quantity == '1' %}selected{% endif %}>1</option>
+                                <option value="2" {% if item.quantity == '2' %}selected{% endif %}>2</option>
+                                <option value="3" {% if item.quantity == '3' %}selected{% endif %}>3</option>
+                                <option value="4" {% if item.quantity == '4' %}selected{% endif %}>4</option>
+                                <option value="5" {% if item.quantity == '5' %}selected{% endif %}>5</option>
+                            </select>
+                            {% for field, value in item.items %}
+                                {% if field in item_fields %}
+                                <h5 class="text-standard">{{ field }}: {{ value }}</h5>
+                                {% endif %}
+                            {% endfor %}
+                            <h5 class="text-standard">${{ item.item.price }} per unit</h5>
+                            <div class="del-button d-flex">
+                                <button class="delete btn btn-danger ml-auto" data-item="{{ item.item.id }}" type="button">Remove</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            {% endif %}
+        {% endfor %}
+        </ul>
+    {% else %}
+    <h5 class="w-100 text-standard">You are not pre-ordering any items.</h5>
+    {% endif %}
+    </div>
+    <div class="w-100">
+        <h3 id="pre-total" class="text-right text-standard">Pre-order Subtotal:
+            {% if pre_order_total %}
+                {% if pre_order_total.endswith == 0 %}
+                    ${{ pre_order_total }}0
+                {% else %}
+                    ${{ pre_order_total }}
+                {% endif %}
+            {% else %}
+            $0
+            {% endif %}
+        </h3>
+    </div>
+
+    {% if account.cart_total or account.pre_order_total %}
     <div id="shipping">
     <img class="dividor" src="{% static 'arrow-divider.png' %}">
     <div class="row acc-row">
-        {% if account.cart_total %}
         <ul class="col">
             <h2 class="text-standard">Shipping Info:</h2>
             {% if user.is_authenticated %}
                 {% if alt_add %}
                 <li class="account-list">
                 <label class="text-standard">Address:</label>
-                <select id="ship_address_name" name="ship_address_name">
+                <select id="ship_address_name" name="ship_address_name"{% if in_store %} disabled {% endif %}>
                     {% for add in alt_add %}
                         {% if not ship_exists and add.main %}
                         <option value="{{ add }}" selected="selected">{{ add.name }}</option>
@@ -125,56 +213,110 @@
             <li class="account-list">
             <label class="text-standard">First Name:</label>
             <br>
-            <input id="first_name" type="text" name="ship_first_name" value="{% if info %}{{ info.first }}{% endif %}">
+            <input id="first_name" type="text" name="ship_first_name" value="{% if info %}{{ info.first }}{% endif %}"{% if in_store %} disabled {% endif %}>
             </li>
             <li class="account-list">
             <label class="text-standard">Address Line 1:</label>
             <br>
-            <input id="ship_add_1" type="text" name="ship_add_1" value="{% if shipping %}{{ shipping.address1 }}{% endif %}">
+            <input id="ship_add_1" type="text" name="ship_add_1" value="{% if shipping %}{{ shipping.address1 }}{% endif %}"{% if in_store %} disabled {% endif %}>
             <li class="account-list">
             <label class="text-standard">City:</label>
             <br>
-            <input id="ship_city" type="text" name="ship_city" value="{% if shipping %}{{ shipping.city }}{% endif %}">
+            <input id="ship_city" type="text" name="ship_city" value="{% if shipping %}{{ shipping.city }}{% endif %}"{% if in_store %} disabled {% endif %}>
             </li>
             <li class="account-list">
             <label class="text-standard">Zip Code:</label>
             <br>
-            <input id="ship_zip" type="text" name="ship_zip" value="{% if shipping %}{{ shipping.zip_code }}{% endif %}">
+            <input id="ship_zip" type="text" name="ship_zip" value="{% if shipping %}{{ shipping.zip_code }}{% endif %}"{% if in_store %} disabled {% endif %}>
             </li>
         </ul>
         <ul class="col cart-form">
             <li class="account-list">
             <label class="text-standard">Last Name:</label>
             <br>
-            <input id="last_name" type="text" name="ship_last_name" value="{% if info %}{{ info.last }}{% endif %}">
+            <input id="last_name" type="text" name="ship_last_name" value="{% if info %}{{ info.last }}{% endif %}"{% if in_store %} disabled {% endif %}>
             </li>
             </li>
             <li class="account-list">
             <label class="text-standard">Address Line 2:</label>
             <br>
-            <input id="ship_add_2" type="text" name="ship_add_2" value="{% if shipping %}{{ shipping.address2 }}{% endif %}">
+            <input id="ship_add_2" type="text" name="ship_add_2" value="{% if shipping %}{{ shipping.address2 }}{% endif %}"{% if in_store %} disabled {% endif %}>
             </li>
             <li class="account-list">
             <label class="text-standard">State:</label>
             <br>
-            <input id="ship_state" type="text" name="ship_state" value="{% if shipping %}{{ shipping.state }}{% endif %}">
+            <input id="ship_state" type="text" name="ship_state" value="{% if shipping %}{{ shipping.state }}{% endif %}"{% if in_store %} disabled {% endif %}>
             </li>
             <li class="account-list">
             <label class="text-standard">Email:</label>
             <br>
-            <input id="email" type="text" name="ship_email" value="{% if info %}{{ info.email }}{% endif %}">
+            <input id="email" type="text" name="ship_email" value="{% if info %}{{ info.email }}{% endif %}"{% if in_store %} disabled {% endif %}>
             </li>
         </ul>
-        {% endif %}
+    </div>
+    <div class="w-100 d-flex">
+        <div class="col">
+            <input id="in_store" class="btn btn-secondary text-standard" type="checkbox" name="in_store" {% if in_store %} checked {% endif %}>
+            <label for="in_store" class="pick-up text-standard"> Pick up in store</label>
+        </div>
+    </div>
+    <div class="w-100 d-flex">
+        <div class="col">
+            <label class="text-standard">Phone:</label>
+            <br>
+            <input id="phone" type="text" name="ship_email" value="{% if info %}{{ info.email }}{% endif %}"{% if not in_store %} disabled {% endif %}>
+        </div>
+        <div class="col">
+            <label class="text-standard">Email:</label>
+            <br>
+            <input id="in_store_email" type="text" name="ship_email" value="{% if info %}{{ info.email }}{% endif %}"{% if not in_store %} disabled {% endif %}>
+        </div>
+    </div>
+    <div class="w-100 d-flex">
+        <div class="col">
+            <p class="text-standard">
+            * One field required, if both are provided email will be prefered unless otherwise communicated.
+            </p>
+        </div>
     </div>
     <div class="w-100 d-flex">
         <input class="btn btn-secondary text-standard ml-auto" type="submit" name="check" value="Continue to Checkout">
     </div>
     </div>
     {% endif %}
+
 </form>
 {% endblock %}
 
 {% block js %}
 <script src="{% static 'js/update_cart.js' %}"></script>
+<script type="text/javascript">
+    $('#in_store').change(function() {
+         if($(this).is(":checked")) {
+            $("#ship_address_name").prop( "disabled", true );
+            $("#first_name").prop( "disabled", true );
+            $("#ship_city").prop( "disabled", true );
+            $("#ship_zip").prop( "disabled", true );
+            $("#last_name").prop( "disabled", true );
+            $("#ship_add_1").prop( "disabled", true );
+            $("#ship_add_2").prop( "disabled", true );
+            $("#ship_state").prop( "disabled", true );
+            $("#email").prop( "disabled", true );
+            $("#in_store_email").prop( "disabled", false );
+            $("#phone").prop( "disabled", false );
+        } else {
+            $("#ship_address_name").prop( "disabled", false );
+            $("#first_name").prop( "disabled", false );
+            $("#ship_city").prop( "disabled", false );
+            $("#ship_zip").prop( "disabled", false );
+            $("#last_name").prop( "disabled", false );
+            $("#ship_add_1").prop( "disabled", false );
+            $("#ship_add_2").prop( "disabled", false );
+            $("#ship_state").prop( "disabled", false );
+            $("#email").prop( "disabled", false );
+            $("#in_store_email").prop( "disabled", true );
+            $("#phone").prop( "disabled", true );
+        }
+    })
+</script>
 {% endblock %}
